# reposynth

./: .gitignore  Cargo.toml  README.md
docs/: architecture.md  status_flow.md
evals/: cycle7_manifest.yaml  cycle8_manifest.yaml  train_params_suggestions.yaml
handoff/: 2026-04-19_2239_my-adapter_synth_status.yaml  2026-04-20_1002_my-adapter.md  2026-04-20_1702_my-adapter.md  2026-04-20_1702_my-adapter_synth_status.yaml  HANDOFF_NOTES.md  cycle10_manifest.yaml  cycle11_manifest.yaml  cycle8_feedback.md  cycle8_manifest.yaml  cycle9_manifest.yaml  holdout_v6.jsonl  status_flow.md  summary.md
python/: booster.py  contrast.py  generate.py  holdout.py  llm_client.py  requirements.txt
src/: config.rs  detect.rs  health.rs  main.rs  process.rs  runner.rs
templates/: synth.yaml.tpl
templates/patterns/: go.yaml  python.yaml
